samples/_failures_safe/1761293646_1bb2c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb5c7be8.c: In function ‘main’:
./samples/SAFE/__tmp_eb5c7be8.c:143:12: error: missing terminating " character
  143 |     printf("Parsing completed successfully\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eb5c7be8.c:143:5: error: expected expression at end of input
  143 |     printf("Parsing completed successfully\n
      |     ^~~~~~
./samples/SAFE/__tmp_eb5c7be8.c:143:5: error: expected declaration or statement at end of input
